finished backend of part 2 i think

--- a/rain_neuro_part2.ipynb
+++ b/rain_neuro_part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,16 +104,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# determine if two electrodes share the same wire\n",
+    "def adjacent_electrodes(electrode1, electrode2, electrode_wire_dict):\n",
+    "    for wire in electrode_wire_dict[electrode1]:\n",
+    "        if wire in electrode_wire_dict[electrode2]:\n",
+    "            return True\n",
+    "        \n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
     "# main function to run simulation\n",
     "def main(a=1, r_e=0.4, n_e=9, lambda_constant=30):\n",
-    "    \n",
-    "    # delete???\n",
-    "    r_e = r_e\n",
-    "    \n",
+    "        \n",
     "    # height/width of grid\n",
     "    l = a * (1 + sqrt(n_e)) \n",
     "    \n",
@@ -128,8 +140,9 @@
     "    # generate electrode coordinates\n",
     "    # they are evenly spaced out along the lxl grid\n",
     "    electrodes = []\n",
-    "    for i in range(int(sqrt(n_e))):\n",
-    "        for j in range(int(sqrt(n_e))):\n",
+    "    sqrt_ne = int(sqrt(n_e))\n",
+    "    for i in range(sqrt_ne):\n",
+    "        for j in range(sqrt_ne):\n",
     "            x = i * (l / n_e)\n",
     "            y = j * (l / n_e)\n",
     "            electrodes.append((x, y))\n",
@@ -144,25 +157,194 @@
     "                wires_touching.append(wire)\n",
     "            electrode_wire_dict[electrode] = wires_touching\n",
     "    \n",
-    "    print(electrode_wire_dict)"
+    "    # generate adjacency matrix for electrodes\n",
+    "    # neighboring electrodes share a common wire\n",
+    "    # @todo make this more efficient instead of brute forcing through all electrodes?\n",
+    "    adjacency_matrix = [[False]*n_e]*n_e\n",
+    "    \n",
+    "    \n",
+    "    for i in range(n_e):\n",
+    "        for j in range(n_e):\n",
+    "            current_electrode = electrodes[i]\n",
+    "            other_electrode = electrodes[j]\n",
+    "            adjacency_matrix[i][j] = adjacent_electrodes(current_electrode, \n",
+    "                           \n",
+    "                                                         other_electrode, electrode_wire_dict)\n",
+    "            \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'r_e' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-128-17287131be3a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# cell for testing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-127-a52833e354a5>\u001b[0m in \u001b[0;36mmain\u001b[0;34m(a, r_e, n_e, lambda_constant)\u001b[0m\n\u001b[1;32m     31\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mwire\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mwires\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0mwires_touching\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 33\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0melectrode_touching_wire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melectrode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwire\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mr_e\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     34\u001b[0m                 \u001b[0mwires_touching\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwire\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0melectrode_wire_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0melectrode\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwires_touching\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-112-ddeedb434238>\u001b[0m in \u001b[0;36melectrode_touching_wire\u001b[0;34m(electrode_points, wire_points, r_e_)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# wire is touching if min distance is less than electrode radius\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mdistance\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0mr_e\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'r_e' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[[(0.24637590945479992, 0), (4.0, 1.401165918904986)]] 2\n",
+      "[] 1\n",
+      "[] 2\n"
      ]
     }
    ],
